--- a/stack.html
+++ b/stack.html
@@ -81,7 +81,7 @@
 
 
 <body>
-	<h1>Pragna Reddy Nathala builds a stack</h1>
+	<h1>Sanku Dheemanth Reddy builds a stack</h1>
 	<div>
 
 	</div>
@@ -98,7 +98,7 @@
 		<button class="pushbtn" style="background-color: black;" onclick="makeNewDiv()">Push value</button>
 		<button class="popbtn" style="background-color: black;" onclick="popItem()">Pop</button>
 		<button class="zapbtn" style="background-color: black;" onclick="Zapvalues()">Zap values</button>
-        
+        <button class="zapbtn" onclick="uniqueHandler()">Unique</button>
 
 
 	</div>
